# virtual-cursor

./: Makefile  README.md  docker-compose.yml  imagemagick.Dockerfile  pyproject.toml  pytest.ini  test-server.py  tox.ini
doc/: gallery.md
scripts/: convert-videos-to-gifs.sh
tests/: test_virtual_cursor.py
virtual_cursor/: __init__.py  lona.py  playwright.py  virtual-cursor.js
